# IsaacSim-Autonomous-Forklift

./: .gitignore  README.md
sdg_src/: README.md  run_sdg.sh
sdg_src/scripts/: synthetic_data_generator.py  synthetic_data_visualize.py
src/forklift_simulator/: CMakeLists.txt  package.xml
src/forklift_simulator/launch/: empty_world.launch  spawn_forklift.launch  warehouse_forklift.launch
src/forklift_simulator/meshes/materials/: M_Forklift_B1_Blue.mtl  SM_Forklift_Body_B01_01.mtl
src/forklift_simulator/urdf/: forklift_b.urdf
